...
  final String? folderName;

  String get displayName => style == null ? name : '$name · $style';
}

const quranReciters = <QuranReciter>[
  QuranReciter(id: 'ar.alafasy', name: 'مشاري راشد العفاسي', cdnBitrate: 128),
  QuranReciter(
    id: 'ar.abdulbasitmurattal',
    name: 'عبد الباسط عبد الصمد',
    style: 'مرتل',
    cdnBitrate: 192,
  ),
...
  QuranReciter(id: 'ar.muhammadayyoub', name: 'محمد أيوب', cdnBitrate: 128),
  QuranReciter(id: 'ar.muhammadjibreel', name: 'محمد جبريل', cdnBitrate: 128),
  QuranReciter(id: 'ar.aymanswoaid', name: 'أيمن سويد', cdnBitrate: 64),
  QuranReciter(id: 'ar.ibrahimakhbar', name: 'إبراهيم الأخضر', cdnBitrate: 32),
  QuranReciter(
    id: 'ar.yasseraddussary',
    name: 'ياسر الدوسري',
    cdnBitrate: 128,
    provider: ReciterProvider.everyAyah,
    folderName: 'Yasser_Ad-Dussary_128kbps',
  ),
  QuranReciter(
    id: 'ar.saadalghamadi',
...
